syntax = "proto3";

option csharp_namespace = "PanopticonService";

package PanopticonService;

import "Common/Utils.proto";


service DoPing {
  rpc Ping (PingRequest) returns (PingReply);
}


message PingRequest {
	Uuid InstanceId = 1;
	string UniqueDeviceId = 2;
	int32 Iteration = 3;
	DTO Current=4;
}

message PingReply {
	string ServerName = 1;
	Uuid InstanceId = 2;
	int32 Iteration = 3;
	DTO Current=4;

	string Panopticon_Server = 10;
	int32 Panopticon_Port = 11;

	string Kafka_Broker = 20;
	string Kafka_Schema = 21;
}
